--- a/app/views/itineraries/index.html.erb
+++ b/app/views/itineraries/index.html.erb
@@ -1,198 +1,103 @@
 <div>
   <div>
-    <h1>
-      List of all itineraries
-    </h1>
+  <style>
+    h1 {text-align: center;}
+    a {text-decoration: none; background-color: none; }
+  </style> 
+    <p>
+      <h1>
+      Explore itineraries
+      </h1>
+    </p>
   </div>
 </div>
 
 <hr>
 
 <div>
-  <div>
-    <h2>
-      Add a new itinerary
-    </h2>
+  <!-- Button trigger modal -->
+  <p><center><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Create new itinerary
+  </button></center>
+  </p>
 
-    <form action="/insert_itinerary" method="post">
-      <div>
-        <label for="name_box">
-          Name
-        </label>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Create new itinerary</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form action="/insert_itinerary" method="post">
+          <p><div>
+            <label for="name_box">
+              Name
+            </label>
 
-        <input type="text" id="name_box" name="query_name">
+            <input type="text" id="name_box" name="query_name">
+          </div></p>
+
+          <p><div>
+            <label for="caption_box">
+              Caption
+            </label>
+
+            <input type="text" id="caption_box" name="query_caption">
+          </div></p>
+
+          <p><div>
+            <label for="cover_image_box">
+              Link to cover image
+            </label>
+
+            <input type="text" id="cover_image_box" name="query_cover_image">
+          </div></p>
+
+          <p><div>
+            <label for="owner_id_box">
+              Owner
+            </label>
+
+            <input type="text" id="owner_id_box" name="query_owner_id">
+          </div></p>
+
+          <p><div>
+            <label for="location_box">
+              Link to location on Google Maps
+            </label>
+
+            <input type="text" id="location_box" name="query_location">
+          </div></p>
+
+          <p><button>
+            Create itinerary
+          </button></p>
+        </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
       </div>
-
-      <div>
-        <label for="caption_box">
-          Caption
-        </label>
-
-        <input type="text" id="caption_box" name="query_caption">
-      </div>
-
-      <div>
-        <label for="cover_image_box">
-          Cover image
-        </label>
-
-        <input type="text" id="cover_image_box" name="query_cover_image">
-      </div>
-
-      <div>
-        <label for="likes_count_box">
-          Likes count
-        </label>
-
-        <input type="text" id="likes_count_box" name="query_likes_count">
-      </div>
-
-      <div>
-        <label for="bookmarks_count_box">
-          Bookmarks count
-        </label>
-
-        <input type="text" id="bookmarks_count_box" name="query_bookmarks_count">
-      </div>
-
-      <div>
-        <label for="activities_count_box">
-          Activities count
-        </label>
-
-        <input type="text" id="activities_count_box" name="query_activities_count">
-      </div>
-
-      <div>
-        <label for="owner_id_box">
-          Owner
-        </label>
-
-        <input type="text" id="owner_id_box" name="query_owner_id">
-      </div>
-
-      <div>
-        <label for="location_box">
-          Location
-        </label>
-
-        <input type="text" id="location_box" name="query_location">
-      </div>
-
-      <button>
-        Create itinerary
-      </button>
-    </form>
+    </div>
   </div>
-</div>
 
-<hr>
-<div>
-  <div>
-    <table border="1">
-      <tr>
-        <th>
-          ID
-        </th>
-
-        <th>
-          Name
-        </th>
-
-        <th>
-          Caption
-        </th>
-
-        <th>
-          Cover image
-        </th>
-
-        <th>
-          Likes count
-        </th>
-
-        <th>
-          Bookmarks count
-        </th>
-
-        <th>
-          Activities count
-        </th>
-
-        <th>
-          Owner
-        </th>
-
-        <th>
-          Location
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-      <% @list_of_itineraries.each do |an_itinerary| %>
-      <tr>
-        <td>
-          <%= an_itinerary.id %>
-        </td>
-
-        <td>
-          <%= an_itinerary.name %>
-        </td>
-
-        <td>
-          <%= an_itinerary.caption %>
-        </td>
-
-        <td>
-          <%= an_itinerary.cover_image %>
-        </td>
-
-        <td>
-          <%= an_itinerary.likes_count %>
-        </td>
-
-        <td>
-          <%= an_itinerary.bookmarks_count %>
-        </td>
-
-        <td>
-          <%= an_itinerary.activities_count %>
-        </td>
-
-        <td>
-          <%= an_itinerary.owner_id %>
-        </td>
-
-        <td>
-          <%= an_itinerary.location %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(an_itinerary.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(an_itinerary.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/itineraries/<%= an_itinerary.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
-      <% end %>
-    </table>
-  </div>
-</div>
+<% @list_of_itineraries.each do |an_itinerary| %>
+  <% owner = User.where({ :id => an_itinerary.owner_id}).at(0) %>
+  <center><div class="card" style="width: 35rem;">
+    <img src="<%= an_itinerary.cover_image %>" class="card-img-top" alt="<%= an_itinerary.name %> Image">
+    <div class="card-body">
+      <i><h6 class="card-subtitle mb-2 text-body-secondary">
+        <a href="/<%= owner.username %>"><%= owner.username %></a></h5></i>
+      <h5 class="card-title"><%= an_itinerary.name %></h5>
+      <p class="card-text"><%= an_itinerary.caption %></p>
+      <a href="/itineraries/<%= an_itinerary.id %>" class="btn btn-primary">Check out details</a>
+    </div>
+  </div></center>
+  <p>
+  
+<% end %>
 
 <hr>
