--- a/app/views/itineraries/index.html.erb
+++ b/app/views/itineraries/index.html.erb
@@ -87,7 +87,9 @@
 <% @list_of_itineraries.each do |an_itinerary| %>
   <% owner = User.where({ :id => an_itinerary.owner_id}).at(0) %>
   <center><div class="card" style="width: 35rem;">
-    <img src="<%= an_itinerary.cover_image %>" class="card-img-top" alt="<%= an_itinerary.name %> Image">
+    <div class="image-container">
+      <img src="<%= an_itinerary.cover_image %>" class="card-img-top cropped-image" alt="<%= an_itinerary.name %> Image">
+    </div>
     <div class="card-body">
       <i><h6 class="card-subtitle mb-2 text-body-secondary">
         <a href="/<%= owner.username %>"><%= owner.username %></a></h5></i>
