--- a/public/css/my_styles.css
+++ b/public/css/my_styles.css
@@ -10,3 +10,23 @@
   object-fit: cover;
   object-position: center;
 }
+
+.activity-figures {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.image-icon {
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.date-card {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: lightblue;
+  font-weight: bold;
+}
