--- a/app/views/itineraries/index.html.erb
+++ b/app/views/itineraries/index.html.erb
@@ -92,7 +92,7 @@
     </div>
     <div class="card-body">
       <i><h6 class="card-subtitle mb-2 text-body-secondary">
-        <a href="/<%= owner.username %>"><%= owner.username %></a></h5></i>
+        <a href="/users/<%= owner.username %>"><%= owner.username %></a></h5></i>
       <h5 class="card-title"><%= an_itinerary.name %></h5>
       <p class="card-text"><%= an_itinerary.caption %></p>
       <a href="/itineraries/<%= an_itinerary.id %>" class="btn btn-primary">Check out details</a>
