--- a/public/css/my_styles.css
+++ b/public/css/my_styles.css
@@ -43,3 +43,9 @@
   margin-bottom: 10px;
   text-align: center;
 }
+
+.img-holder .link {
+    position: absolute;
+    bottom: 10px; /*your button position*/
+    right: 10px; /*your button position*/
+}
