--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -86,9 +86,17 @@
 
     <p><div class="activity-figures">
       <figure>
-        <% matching_like = Like.where({ :fan_id => current_user.id }, { :itinerary_id => @the_itinerary.id}).at(0) %>
-        <%if matching_like == nil%>
-          <a href="/likes/<%=@the_itinerary.id%>" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/58/58746.png" class="image-icon" alt="Likes"></a>
+        <%if current_user.present?%>
+          <%if current_user.id == @the_itinerary.owner_id %>
+            <img src="https://cdn-icons-png.flaticon.com/512/58/58746.png" class="image-icon" alt="Likes">
+          <%else%>
+            <% matching_like = Like.where({ :fan_id => current_user.id }, { :itinerary_id => @the_itinerary.id}).at(0) %>
+            <%if matching_like == nil%>
+              <a href="/likes/<%=@the_itinerary.id%>" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/58/58746.png" class="image-icon" alt="Likes"></a>
+            <%else%>
+              <a href="/delete_like/<%=@the_itinerary.id%>" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/105/105220.png" class="image-icon" alt="Likes"></a>
+            <%end%>
+          <%end%>
         <%else%>
           <img src="https://cdn-icons-png.flaticon.com/512/58/58746.png" class="image-icon" alt="Likes">
         <%end%>
@@ -236,7 +244,21 @@
     </div>
     </div>
     <div class="card-body">
-      <h3 class="card-title"><%= an_activity.name %></h3>
+      <h3 class="card-title">
+      <%if current_user.present? %>
+        <% matching_mark = Bookmark.where({ :bookmarker_id => current_user.id }, { :activity_id => an_activity.id}).at(0) %>
+          <%if matching_like == nil%>
+            <%= an_activity.name %> <a href= "/insert_bookmark/<%= an_activity.id %>"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark" viewBox="0 0 16 16">
+  <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/></svg></i></a>
+          <%else%>
+            <%= an_activity.name %> <a href= "/delete_bookmark/<%= an_activity.id %>"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark-fill" viewBox="0 0 16 16">
+  <path d="M2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2"/>
+</svg></a>
+          <%end%>
+      <%else%>
+        <%= an_activity.name %></a>
+      <%end%>
+      </h3>
       <h6 class="card-title"><%= an_activity.description %></h6>
       <p class="card-text"><%= an_activity.location %></p>
         <p><div class="activity-figures">
