--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -246,8 +246,11 @@
     <div class="card-body">
       <h3 class="card-title">
       <%if current_user.present? %>
-        <% matching_mark = Bookmark.where({ :bookmarker_id => current_user.id }, { :activity_id => an_activity.id}).at(0) %>
-          <%if matching_like == nil%>
+        <%if current_user.id == an_activity.traveller_id %>
+          <%= an_activity.name %>
+        <%else%>
+          <% matching_mark = Bookmark.where({ :activity_id => an_activity.id}, { :bookmarker_id => current_user.id }).at(0) %>
+          <%if matching_mark == nil%>
             <%= an_activity.name %> <a href= "/insert_bookmark/<%= an_activity.id %>"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark" viewBox="0 0 16 16">
   <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/></svg></i></a>
           <%else%>
@@ -255,8 +258,9 @@
   <path d="M2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2"/>
 </svg></a>
           <%end%>
+        <%end%>
       <%else%>
-        <%= an_activity.name %></a>
+        <%= an_activity.name %>
       <%end%>
       </h3>
       <h6 class="card-title"><%= an_activity.description %></h6>
